RESOLVED FIXED74354
ARMv7 version of DFG soft modulo does register allocation inside of control flow
https://bugs.webkit.org/show_bug.cgi?id=74354
Summary ARMv7 version of DFG soft modulo does register allocation inside of control flow
Filip Pizlo
Reported 2011-12-12 15:07:34 PST
Which then results in crashes on SunSpider. Patch forthcoming.
Attachments
Filip Pizlo
Comment 1 2011-12-12 15:08:49 PST
Note You need to log in before you can comment on or make changes to this bug.